force-app/main/default/objects/Attendance__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>