force-app/main/default/objects/Attendance__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Make-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>