force-app/main/default/objects/Attendance__c/fields/CNA_Hours__c.field-meta.xml
<CustomField>
    <fullName>CNA_Hours__c</fullName>
    <formula>VALUE(IF( AND(Roaster__c  =  CNA_Training__r.Roster__c,  ISPICKVAL( Status__c , &apos;Present&apos;) )  ,   TEXT (CNA_Training__r.Hours__c) , NULL))</formula>
    <label>CNA Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>