force-app/main/default/objects/Attendance__c/fields/CNA_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CNA_Minutes__c</fullName>
    <formula>VALUE(IF( AND(Roaster__r.Id  =  CNA_Training__r.Roster__r.Id,  ISPICKVAL( Status__c , &apos;Present&apos;) )  ,   TEXT (CNA_Training__r.Minutes__c ) , NULL))</formula>
    <label>CNA Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>