force-app/main/default/objects/Attendance__c/fields/CNA_Minutes_in_number__c.field-meta.xml
<CustomField>
    <fullName>CNA_Minutes_in_number__c</fullName>
    <label>CNA Minutes in number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>