force-app/main/default/objects/Attendance__c/fields/CNA_Modules_Covered__c.field-meta.xml
<CustomField>
    <fullName>CNA_Modules_Covered__c</fullName>
    <label>CNA Modules Covered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Module 01: Introduction</fullName>
            </value>
            <value>
                <fullName>Module 02: Patient’s Rights</fullName>
            </value>
            <value>
                <fullName>Module 03: Interpersonal Skills</fullName>
            </value>
            <value>
                <fullName>Module 04: Prevention and Management of Catastrophe</fullName>
            </value>
            <value>
                <fullName>Module 05: Body Mechanics</fullName>
            </value>
            <value>
                <fullName>Module 06: Medical and Surgical Asepsis</fullName>
            </value>
            <value>
                <fullName>Module 07: Weights and Measures</fullName>
            </value>
            <value>
                <fullName>Module 08: Patient Care Skills</fullName>
            </value>
            <value>
                <fullName>Module 09: Patient Care Procedures</fullName>
            </value>
            <value>
                <fullName>Module 10: Vital Signs</fullName>
            </value>
            <value>
                <fullName>Module 11: Nutrition</fullName>
            </value>
            <value>
                <fullName>Module 12: Emergency Procedures</fullName>
            </value>
            <value>
                <fullName>Module 13: Long-Term Care</fullName>
            </value>
            <value>
                <fullName>Module 14: Rehabilitation Nursing</fullName>
            </value>
            <value>
                <fullName>Module 15: Observation &amp; Charting</fullName>
            </value>
            <value>
                <fullName>Module 16: Death &amp; Dying</fullName>
            </value>
            <value>
                <fullName>Module 17: Elder abuse</fullName>
            </value>
            <value>
                <fullName>Module 18: Other: CPR/Fire &amp; Safety Certifications</fullName>
            </value>
            <value>
                <fullName>Module 19: Other: Skills practice/Preparation for State Exam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>