force-app/main/default/objects/Attendance__c/fields/CNA_Total_Time_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>CNA_Total_Time_in_Hours__c</fullName>
    <label>CNA Total Time (in Hours)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>