force-app/main/default/objects/Attendance__c/fields/CNA_Training__c.field-meta.xml
<CustomField>
    <fullName>CNA_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CNA Training</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Roaster__c</field>
            <operation>equals</operation>
            <valueField>CNA_Training__c.Roster__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CNA_Training__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>