force-app/main/default/objects/Attendance__c/fields/CNA_Type__c.field-meta.xml
<CustomField>
    <fullName>CNA_Type__c</fullName>
    <formula>TEXT(CNA_Training__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNA Type</label>
    <type>Text</type>
</CustomField>