force-app/main/default/objects/Attendance__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Class Date</label>
    <type>Date</type>
</CustomField>