force-app/main/default/objects/Attendance__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Enrollment</label>
    <referenceTo>SFDC_Enrollment__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>