force-app/main/default/objects/Attendance__c/fields/Enrollment_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Name__c</fullName>
    <formula>Enrollment__r.Contact__r.FirstName  + Enrollment__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Name</label>
    <type>Text</type>
</CustomField>