force-app/main/default/objects/Attendance__c/fields/Enrollment_No__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_No__c</fullName>
    <formula>Enrollment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment No</label>
    <type>Text</type>
</CustomField>