force-app/main/default/objects/Attendance__c/fields/Has_Make_Up_Class__c.field-meta.xml
<CustomField>
    <fullName>Has_Make_Up_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has created to find the Attendance records that&apos;s belong to Make-Up Class for Students.</description>
    <label>Belongs to MakeUp Class?</label>
    <type>Checkbox</type>
</CustomField>