force-app/main/default/objects/Attendance__c/fields/hours_rolledUp__c.field-meta.xml
<CustomField>
    <fullName>hours_rolledUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hours_rolledUp?</label>
    <type>Checkbox</type>
</CustomField>