force-app/main/default/objects/Attendance__c/fields/Make_Up_Class__c.field-meta.xml
<CustomField>
    <fullName>Make_Up_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Make Up Class</label>
    <referenceTo>Make_Up_Class__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>