force-app/main/default/objects/Attendance__c/fields/Makeup_Class_status__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Class_status__c</fullName>
    <label>Makeup Class status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Attended regular class</fullName>
            </value>
            <value>
                <fullName>Attended make-up class</fullName>
            </value>
            <value>
                <fullName>Need to attend make-up class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>