force-app/main/default/objects/Attendance__c/fields/MakeUp_Created__c.field-meta.xml
<CustomField>
    <fullName>MakeUp_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MakeUp Created?</label>
    <type>Checkbox</type>
</CustomField>