force-app/main/default/objects/Attendance__c/fields/Minutes__c.field-meta.xml
<CustomField>
    <fullName>Minutes__c</fullName>
    <label>Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <default>true</default>
                <label>00</label>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>