force-app/main/default/objects/Attendance__c/fields/Roaster__c.field-meta.xml
<CustomField>
    <fullName>Roaster__c</fullName>
    <label>Roster</label>
    <referenceTo>Roaster__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>