force-app/main/default/objects/Attendance__c/fields/Roaster_No__c.field-meta.xml
<CustomField>
    <fullName>Roaster_No__c</fullName>
    <formula>Roaster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roster ID</label>
    <type>Text</type>
</CustomField>