force-app/main/default/objects/Attendance__c/fields/select__c.field-meta.xml
<CustomField>
    <fullName>select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>select</label>
    <type>Checkbox</type>
</CustomField>