force-app/main/default/objects/Attendance__c/fields/Students_RSVP__c.field-meta.xml
<CustomField>
    <fullName>Students_RSVP__c</fullName>
    <label>Students RSVP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting RSVP</fullName>
                <default>true</default>
                <label>Awaiting RSVP</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>