force-app/main/default/objects/Attendance__c/fields/Total_CNA_Time_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Total_CNA_Time_Clinical__c</fullName>
    <label>Total CNA Time (Clinical/Preceptor)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>