force-app/main/default/objects/Attendance__c/fields/Total_Time_Classroom_Theory__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Classroom_Theory__c</fullName>
    <formula>IF( 
ISPICKVAL(CNA_Class_Type__c,&quot;Classroom/Theory&quot;),(Value(TEXT(Hours__c) ) + ( Value(Text(Minutes__c)) / 60)),NULL)</formula>
    <label>Total Time (Classroom/Theory)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>