force-app/main/default/objects/Attendance__c/fields/Total_Time_Clinical_Preceptor__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Clinical_Preceptor__c</fullName>
    <formula>IF(
ISPICKVAL(CNA_Class_Type__c,&quot;Clinical/Preceptor&quot;),(Value(TEXT(Hours__c) ) + ( Value(Text(Minutes__c)) / 60)),NULL)</formula>
    <label>Total Time (Clinical/Preceptor)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>